Fixed tab opening

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <p>
     <!-- The social media icon bar -->
     <div class="icon-bar">
-    <a href="https://twitter.com/sahil_tah" class="twitter"><i class="fa fa-twitter"></i></a>
-    <a href="https://github.com/Sahil-Tah" class="github"><i class="fa fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/sahil-tah" class="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="https://sahil-tah.github.io/resume/" class="rss"><i class="fa fa-rss"></i></a>
+    <a href="https://twitter.com/sahil_tah" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a href="https://github.com/Sahil-Tah" class="github" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/sahil-tah" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+    <a href="https://sahil-tah.github.io/resume/" class="rss" target="_blank"><i class="fa fa-rss"></i></a>
     </div> 
   </p>
   <footer>
