Fixed tab opening

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="back">
   <h1>Flappy Learn (AI)</h1>
   <p>
-    <span id="forkongithub"><a href="https://github.com/Sahil-Tah/Flappy-Learn/">Fork me on GitHub</a></span>
+    <span id="forkongithub"><a href="https://github.com/Sahil-Tah/Flappy-Learn/" target="_blank">Fork me on GitHub</a></span>
   </p>
   <div id="canvascontainer"></div>
   <div class="bg">
