Added particle js

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   <script language="javascript" type="text/javascript" src="pipe.js"></script>
   <meta name="description" content="Flappy Bird Game based on Artificial Intelligence">
   <meta name="keywords" content="HTML,CSS,JavaScript, NN, NeuralNetwork, AI, reinforcementlearning, genetic-algorithm, flappybird, game">
-  <meta name="author" content="Shubham Kumar">
+  <meta name="author" content="Sahil Tah">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="back">
-  <h1>Flappy Learn (AI)</h1>
+  <div id="particles-js"></div>
+  <script type="text/javascript" src="particles.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+  <h1>Neuroevolution of Flappy Bird game</h1>
   <p>
     <span id="forkongithub"><a href="https://github.com/Sahil-Tah/Flappy-Learn/" target="_blank">Fork me on GitHub</a></span>
   </p>
